<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_lib">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_massage_subject">Ссылка на курс:</string>
    <string name="share_massage">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="support_mail">MrHumanFed@yandex.ru</string>
    <string name="support_subject">Сообщение разработчикам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам за крутое приложение!</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="placeholder_not_found">Ничего не нашлось</string>
    <string name="placeholder_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="favorites_placeholder">Ваша медиатека пуста</string>
    <string name="playlist_placeholder">Вы не создали\n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlists">Плейлисты</string>
    <string name="favorites_tracks">Избранные треки</string>
    <string name="update_button">Обновить</string>
    <string name="clear_history_button">Очистить историю</string>
    <string name="text_track_time">Длительность</string>
    <string name="text_collection_name">Альбом</string>
    <string name="text_release_date">Год</string>
    <string name="text_genre_name">Жанр</string>
    <string name="text_country">Страна</string>
    <string name="search_history_head">Вы искали</string>
    <string name="playlist_name_input">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_cancel_request">Завершить создание плейлиста?</string>
    <string name="unsaved_date_description">Все несохраненные данные будут потеряны</string>
    <string name="cansel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="playlist_create">Создать</string>
    <string name="add_on_playlist_bottom_sheet">Добавить в плейлист</string>
    <string name="already_add">Трек уже добавлен в плейлист %s</string>
    <string name="add_track_to_playlist">Добавлено в плейлист %s</string>
    <string name="empty_playlist">Плейлист пуст</string>
    <string name="all_time_and_count_playlist">%s минут • %s треков</string>
    <string name="tracks_count_playlist">%d треков</string>
    <string name="emptyTrackSend">В данном плейлисте нет треков для отправки</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="save_playlist">Сохранить</string>
    <string name="delete_playlist_dialog_title">Удалить плейлист \"%s\"?</string>
    <string name="delete_playlist_dialog_message">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="delete_track_dialog_title">Удалить трек \"%s\"?</string>
    <string name="delete_track_dialog_message">Удалить трек из плейлиста?</string>

</resources>