<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding"
    android:paddingTop="@dimen/head_padding"
    android:paddingEnd="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/back_button"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:layout_marginTop="@dimen/margin_from_header"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:gravity="center_vertical"
        android:text="@string/share"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_text_size"
        app:drawableEndCompat="@drawable/share" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:gravity="center_vertical"
        android:text="@string/support"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_text_size"
        app:drawableEndCompat="@drawable/support" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_height"
        android:gravity="center_vertical"
        android:text="@string/user_agreement"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_text_size"
        app:drawableEndCompat="@drawable/arrow_forward" />

</LinearLayout>