<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding"
    android:paddingBottom="28dp"
    android:paddingTop="@dimen/head_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_from_header">

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            app:icon="@drawable/search"
            app:iconTint="@color/black"
            app:iconGravity="textStart"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            app:cornerRadius="@dimen/corner_radius"
            android:layout_marginBottom="@dimen/padding"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:id="@+id/search"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            app:icon="@drawable/media_lib"
            app:iconTint="@color/black"
            app:iconGravity="textStart"
            android:text="@string/media_lib"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:textStyle="normal"
            app:cornerRadius="@dimen/corner_radius"
            android:layout_marginBottom="@dimen/padding"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:id="@+id/media_lib"/>



        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            app:icon="@drawable/settings"
            app:iconTint="@color/black"
            app:iconGravity="textStart"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            app:cornerRadius="@dimen/corner_radius"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:id="@+id/settings"/>

    </LinearLayout>

</LinearLayout>

