<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/playlist_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/playlist_cover_card"
            android:layout_width="@dimen/track_image_size"
            android:layout_height="@dimen/track_image_size"
            android:layout_marginVertical="@dimen/track_image_margin_vertical"
            android:layout_marginStart="@dimen/track_image_margin_start"
            android:background="?attr/colorPrimary"
            app:cardCornerRadius="2dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/playlist_image"
                android:layout_width="@dimen/track_image_size"
                android:layout_height="@dimen/track_image_size"
                android:adjustViewBounds="true"
                android:background="?attr/colorPrimary"
                android:scaleType="centerCrop"
                android:src="@drawable/album_placeholder" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/track_text_margin_horizontal"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playlist_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/ys_display_regular"
                android:maxLines="1"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/text_size"
                tools:text="Smellsg Like Teen Spiri" />

            <TextView
                android:id="@+id/tracks_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/ys_display_regular"
                android:maxLines="1"
                android:textColor="?attr/customColorValue"
                android:textSize="@dimen/small_text_size"
                tools:text="2563 треков" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/share_playlist"
        style="@style/SettingsTextStyle"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="@dimen/padding"
        android:text="@string/share_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlist_layout" />
    <TextView
        android:id="@+id/edit_playlist"
        style="@style/SettingsTextStyle"
        android:layout_width="match_parent"
        android:paddingHorizontal="@dimen/padding"
        android:text="@string/edit_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/share_playlist" />
    <TextView
        android:id="@+id/delete_playlist"
        style="@style/SettingsTextStyle"
        android:layout_width="match_parent"
        android:paddingHorizontal="@dimen/padding"
        android:text="@string/delete_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_playlist" />
</androidx.constraintlayout.widget.ConstraintLayout>