<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".media_lib.ui.add_playlist.AddPlaylistFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"
        app:contentInsetStartWithNavigation="@dimen/contentInsetStartWithNavigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/new_playlist" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:clipToPadding="false"
        android:focusableInTouchMode="true"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/add_image_playlist"
                app:shapeAppearanceOverlay="@style/circleImageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:layout_marginHorizontal="@dimen/add_image_playlist_margin_horizontal"
                android:layout_marginTop="@dimen/add_image_playlist_margin_top"
                android:src="@drawable/add_image_playlist"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/playlist_name_layout"
                style="@style/AddPlaylistInputTextStyle"
                android:layout_marginTop="32dp"
                android:hint="@string/playlist_name_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_image_playlist">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/playlist_name"
                    style="@style/AddPlaylistInputTextStyle.InputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/playlist_description_layout"
                style="@style/AddPlaylistInputTextStyle"
                android:layout_marginTop="16dp"
                android:hint="@string/playlist_description"
                app:layout_constraintVertical_chainStyle="spread_inside"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/create_button"
                app:layout_constraintTop_toBottomOf="@id/playlist_name_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/playlist_description"
                    style="@style/AddPlaylistInputTextStyle.InputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/create_button"
                style="@style/CreatePlaylistButtonStyle"
                android:layout_marginHorizontal="17dp"
                android:enabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playlist_description_layout"
                android:layout_marginTop="16dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>