<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <ImageView
        android:id="@+id/album_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:src="@mipmap/album_foreground"
        app:layout_constraintBottom_toTopOf="@id/track_name"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@id/right_border_album"
        app:layout_constraintStart_toStartOf="@id/left_border_album"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0"/>

    <TextView
        android:id="@+id/track_name"
        style="@style/AudioPlayerTextNameAndArtist"
        android:layout_marginTop="24dp"
        android:textSize="@dimen/head_text_size"
        app:layout_constraintBottom_toTopOf="@id/artist_name"
        app:layout_constraintEnd_toEndOf="@id/right_border_album"
        app:layout_constraintStart_toStartOf="@id/left_border_album"
        app:layout_constraintTop_toBottomOf="@id/album_image"
        tool:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/artist_name"
        style="@style/AudioPlayerTextNameAndArtist"
        android:layout_marginTop="12dp"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@id/play_button"
        app:layout_constraintEnd_toEndOf="@id/right_border_album"
        app:layout_constraintStart_toStartOf="@id/left_border_album"
        app:layout_constraintTop_toBottomOf="@id/track_name"
        tool:text="The Beatles " />

    <ImageButton
        android:id="@+id/add_playlist_button"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/add_playlist_button"
        android:elevation="0dp"
        app:layout_constraintEnd_toStartOf="@id/play_button"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/left_border_album"
        app:layout_constraintTop_toTopOf="@id/play_button" />

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/play_button"
        android:elevation="0dp"
        app:layout_constraintBottom_toTopOf="@id/demo_play_time"
        app:layout_constraintEnd_toStartOf="@id/add_favorites_button"
        app:layout_constraintStart_toEndOf="@id/add_playlist_button"
        app:layout_constraintTop_toBottomOf="@id/artist_name" />

    <ImageButton
        android:id="@+id/add_favorites_button"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/add_favorites_button"
        android:elevation="0dp"
        app:layout_constraintEnd_toStartOf="@id/right_border_album"
        app:layout_constraintStart_toEndOf="@id/play_button"
        app:layout_constraintTop_toTopOf="@id/play_button" />

    <TextView
        android:id="@+id/demo_play_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/placeholder_button_text_size"
        app:layout_constraintBottom_toTopOf="@id/text_track_time"
        app:layout_constraintEnd_toEndOf="@id/play_button"
        app:layout_constraintStart_toStartOf="@id/play_button"
        app:layout_constraintTop_toBottomOf="@id/play_button"
        android:text="00:00" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/text_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="text_track_time, text_collection_name,
        text_release_date, text_genre_name, text_country"
        app:barrierDirection="end"
        />

    <TextView
        android:id="@+id/text_track_time"
        style="@style/AudioPlayerTextInfo"
        android:text="@string/text_track_time"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/text_collection_name"
        app:layout_constraintEnd_toStartOf="@id/track_time"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/left_border_text" />

    <TextView
        android:id="@+id/track_time"
        style="@style/AudioPlayerTextInfoChanged"
        app:layout_constraintBaseline_toBaselineOf="@id/text_track_time"
        app:layout_constraintEnd_toStartOf="@id/right_border_text"
        app:layout_constraintStart_toEndOf="@id/text_track_time"
        tool:text="5:30" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/collection_name_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="text_collection_name, collection_name"
        android:visibility="visible"/>
    <TextView
        android:id="@+id/text_collection_name"
        style="@style/AudioPlayerTextInfo"
        android:text="@string/text_collection_name"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toTopOf="@id/text_release_date"
        app:layout_constraintEnd_toStartOf="@id/collection_name"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/left_border_text" />

    <TextView
        android:id="@+id/collection_name"
        style="@style/AudioPlayerTextInfoChanged"
        android:layout_width="0dp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBaseline_toBaselineOf="@id/text_collection_name"
        app:layout_constraintEnd_toStartOf="@id/right_border_text"
        app:layout_constraintStart_toEndOf="@id/text_group"
        tool:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/text_release_date"
        style="@style/AudioPlayerTextInfo"
        android:text="@string/text_release_date"
        app:layout_constraintBottom_toTopOf="@id/text_genre_name"
        app:layout_constraintEnd_toStartOf="@id/release_date"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/left_border_text" />

    <TextView
        android:id="@+id/release_date"
        style="@style/AudioPlayerTextInfoChanged"
        app:layout_constraintBaseline_toBaselineOf="@id/text_release_date"
        app:layout_constraintEnd_toStartOf="@id/right_border_text"
        app:layout_constraintStart_toEndOf="@id/text_release_date"
        tool:text="1999" />

    <TextView
        android:id="@+id/text_genre_name"
        style="@style/AudioPlayerTextInfo"

        android:text="@string/text_genre_name"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/text_country"
        app:layout_constraintEnd_toStartOf="@id/genre_name"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/left_border_text" />

    <TextView
        android:id="@+id/genre_name"
        style="@style/AudioPlayerTextInfoChanged"
        app:layout_constraintBaseline_toBaselineOf="@id/text_genre_name"
        app:layout_constraintEnd_toStartOf="@id/right_border_text"
        app:layout_constraintStart_toEndOf="@id/text_genre_name"
        tool:text="pop" />

    <TextView
        android:id="@+id/text_country"
        style="@style/AudioPlayerTextInfo"
        android:text="@string/text_country"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/bottom_border"
        app:layout_constraintEnd_toStartOf="@id/country"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/left_border_text" />

    <TextView
        android:id="@+id/country"
        style="@style/AudioPlayerTextInfoChanged"
        app:layout_constraintBaseline_toBaselineOf="@id/text_country"
        app:layout_constraintEnd_toStartOf="@id/right_border_text"
        app:layout_constraintStart_toEndOf="@id/text_country"
        tool:text="America" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="24dp" />


</androidx.constraintlayout.widget.ConstraintLayout>